@@ -98,6 +98,7 @@ Version 1.7.0-svn:
    * Fixed handling of floating-point WML constants on localized Windows
      (impacts "submerge" animations and AI settings)
    * Improved random village naming
+   * Fixed control transfer after player leaves MP game (bug #13238)
    * Fixed a bug with auto-stored WML variables not being restored correctly
 
 Version 1.6a:
